// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalButtonLink given { href: 'https://example.com', children: 'Link' }, should match snapshot 1`] = `
<DocumentFragment>
  <a
    class="px-3 py-0 rounded btn-bordered btn-smaller d-inline-flex align-items-center font-weight-bold btn btn-secondary"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`ExternalButtonLink given { href: 'https://getshifter.io', children: 'Link' }, should match snapshot 1`] = `
<DocumentFragment>
  <a
    class="px-3 py-0 rounded btn-bordered btn-smaller d-inline-flex align-items-center font-weight-bold btn btn-secondary"
    href="https://getshifter.io"
    rel="noopener"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;
